# ai-job-aggregator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml
collector/: __init__.py  __main__.py  api.py  config.py  db.py  fetcher.py  models.py  pipeline.py  robots.py
collector/data/: .gitkeep  seed_jobs.json
collector/llm/: __init__.py  anthropic_estimator.py  base.py  gemini_estimator.py  heuristic_estimator.py
collector/sources/: __init__.py  base.py  remoteok.py  seed.py
tests/: conftest.py  test_anthropic_estimator.py  test_api.py  test_config.py  test_db.py  test_estimator_factory.py  test_heuristic_estimator.py  test_models.py  test_pipeline.py  test_robots.py  test_sources.py
web/: .env.example  .eslintrc.cjs  .gitignore  index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: Filters.tsx  JobCard.tsx  JobGrid.tsx  Spinner.tsx  StatBar.tsx
web/src/components/__tests__/: JobCard.test.tsx
web/src/hooks/: useJobs.ts
web/src/lib/: api.ts  filters.ts  mockJobs.ts
web/src/lib/__tests__/: api.test.ts  filters.test.ts
web/src/test/: setup.ts
